[tool.poetry]
name = "audition"
version = "0.1.0"
description = ""
authors = ["whoami <whoami@systemli.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pysub-parser = "^1.0"
spacy = "^2.2"
spacy-lookups-data = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
